--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container mx-auto px-4 max-w-4xl">
     <!-- Header -->
     <div class="flex justify-between items-center mb-8">
-      <%= link_to documents_path, class: "btn-outline" do %>
+      <%= link_to root_path, class: "btn-outline" do %>
         <%= lucide_icon "arrow-left", class: "w-4 h-4 mr-2" %>
         返回列表
       <% end %>
