--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -26,10 +26,8 @@
           <%= f.select :theme_id,
               options_from_collection_for_select(@themes, :id, :name, @document.theme_id),
               {},
-              class: "btn-secondary py-2 pl-3 pr-8",
+              class: "btn-secondary py-2 px-3",
               data: { wemd_editor_target: "themeSelect", action: "change->wemd-editor#updatePreview" } %>
-          <!-- Save Button -->
-          <%= f.submit "保存", class: "btn-primary", data: { wemd_editor_target: "saveButton" } %>
         </div>
       </div>
     </header>
